docs: update dashboard code comments

--- a/config/locales/translations.es.yml
+++ b/config/locales/translations.es.yml
@@ -1,6 +1,8 @@
 ---
 :es:
   lesli:
+    dashboards:
+      title: Dashboards
     shared:
       view_discussions: Discusiones
       button_add_new: Agregar nuevo
