--- a/config/locales/translations.en.yml
+++ b/config/locales/translations.en.yml
@@ -1,6 +1,8 @@
 ---
 :en:
   lesli:
+    dashboards:
+      title: Dashboards
     shared:
       view_discussions: Discussions
       button_add_new: Add new
