--- a/config/locales/translations.en.yml
+++ b/config/locales/translations.en.yml
@@ -11,6 +11,9 @@
       button_save: Save
       button_delete: Delete
       button_edit: Edit
+      view_status_active: Active
+      view_status_inactive: Inactive
+      button_settings: Settings
     users/sessions:
       view_username: Username
     dashboards:
