feat: add header translations

--- a/config/locales/translations.en.yml
+++ b/config/locales/translations.en.yml
@@ -18,3 +18,6 @@
       view_username: Username
     dashboards:
       title: Dashboards
+    application:
+      navigation_logout: Logout
+      navigation_my_profile: My profile
