feat: move authentication & authorization to its own engines

--- a/config/locales/translations.en.yml
+++ b/config/locales/translations.en.yml
@@ -15,6 +15,7 @@
       view_status_inactive: Inactive
       button_settings: Settings
       button_show: Show
+      toolbar_search: Search...
     users/sessions:
       view_username: Username
     dashboards:
