--- a/config/locales/translations.pt.yml
+++ b/config/locales/translations.pt.yml
@@ -20,6 +20,9 @@
       view_username: ":lesli.users/sessions.view_username:"
     dashboards:
       title: ":lesli.dashboards.title:"
+      column_name: ":lesli.dashboards.column_name:"
+      column_default: ":lesli.dashboards.column_default:"
+      view_add_component: ":lesli.dashboards.view_add_component:"
     application:
       navigation_logout: ":lesli.application.navigation_logout:"
       navigation_my_profile: ":lesli.application.navigation_my_profile:"
