--- a/config/locales/translations.es.yml
+++ b/config/locales/translations.es.yml
@@ -1,2 +1,8 @@
 ---
-:es: {}
+:es:
+  lesli:
+    shared:
+      message_error_not_found: ":lesli.shared.message_error_not_found:"
+      message_error_resource_not_found: El recurso que estás buscando no fue encontrado
+      message_error_unauthorized: No autorizado
+      message_error_unauthorized_credentials: ":lesli.shared.message_error_unauthorized_credentials:"
