--- a/config/locales/translations.en.yml
+++ b/config/locales/translations.en.yml
@@ -1,2 +1,9 @@
 ---
-:en: {}
+:en:
+  lesli:
+    shared:
+      message_error_not_found: Not found
+      message_error_resource_not_found: The resource you are looking for was not found.
+      message_error_unauthorized: Unauthorized
+      message_error_unauthorized_credentials: 'We could not validate your privileges.
+        Please ask the administrator to send you an invite to see this content. '
